added a background, added a nav bar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+#root {
+font-family: "Arial Black", "Arial Bold", Gadget, sans-serif; 
+background-image: url("assets/bananas.webp");
+}
+
 #posts-index img {
   width: 300px;
 }
